--- a/原则/关键性名词.md
+++ b/原则/关键性名词.md
@@ -1,25 +1,25 @@
-- 对冲
+1. 对冲
 
-- 利率
+2. 利率
 
-- 货币市场
+3. 货币市场
 
-- 风险敞口
+4. 风险敞口
 
-- 养老基金
+5. 养老基金
 
-- 债券
+6. 债券
 
-- 信托投资
+7. 信托投资
 
-- 做空
+8. 做空
 
-- 股权投资
+9. 股权投资
 
-- 大宗商品
+10. 大宗商品
 
-- 增长率和通胀率
+11. 增长率和通胀率
 
-- 风险平价
+12. 风险平价
 
-- 双相障碍
+13. 双相障碍
