--- a/原则/读书笔记.md
+++ b/原则/读书笔记.md
@@ -1,3 +1,34 @@
+### 名词解释
+
+1. 对冲
+
+2. 利率
+
+3. 货币市场
+
+4. 风险敞口
+
+5. 养老基金
+
+6. 债券
+
+7. 信托投资
+
+8. 做空
+
+9. 股权投资
+
+10. 大宗商品
+
+11. 增长率和通胀率
+
+12. 风险平价
+
+13. 双相障碍
+
+
+### 句子摘抄
+
 1. 当政府决策者向你承诺他们不会允许货币贬值发生时，不要相信他们，他们越是坚定地做出这样的承诺，局势也许就越严重，因而货币贬值即将发生的概率也越大。
 
 2. 利用阿尔法叠加的方法提供了一种不受潜在市场表现影响的押注方式。利用这种方式对待市场让我明白，成为一个成功的投资者的要诀之一，是只对你有高度信心的投资对象进行冒险押注，并对这些对象进行充分的投资。（注：贝塔（消极）、阿尔法（积极））
